--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@ Portfolio
 </head>
 <body>
 
+<header>
+    <h1>Moje portfolio GitHub</h1>
+    <p>Automatyczne pobieranie projektów z GitHub</p>
+  </header>
 
+<main>
+    <div id="repo-list">
+      
+    </div>
+  </main>
 
 
 
